# rust-cli

./: Cargo.toml  package.json
src/: main.rs
src/helpers/: copy.rs  get_version.rs  mod.rs  render_title.rs  validate_app_name.rs  welcome.rs
src/installers/: defaults.rs  env_vars.rs  mod.rs  nextauth.rs  prisma.rs  tailwind.rs  trpc.rs
src/prompts/: git_init_prompt.rs  install_prompt.rs  language_prompt.rs  mod.rs  name_prompt.rs  package_manager_prompt.rs  packages_prompt.rs
