[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
dialoguer = "0.10.2"
inquire = {version="0.4.0", features=["date"]}
rand = "0.8.5"
regex = "1.6.0"
spinner = "0.5.0"
strum = {version="0.24.1", features = ["derive"]}
